--- a/ingress-demo/springboot.yml
+++ b/ingress-demo/springboot.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ReplicationController
 metadata:
   labels:
-    name: springboot
+    app: springboot
   name: spring-controller
 spec:
   replicas: 2
